<?xml version="1.0"?>
<package format="2">
  <name>robomis</name>
  <version>0.1.0</version>
  <description>The robomis package</description>

  <maintainer email="thi.zinkeng@gmail.com">Thierry Zinkeng</maintainer>

  <license>Apache 2.0</license>


  <buildtool_depend>catkin</buildtool_depend>
<!--  <depend package="tf" />-->
  <build_depend>qt_build</build_depend>
  <build_depend>qt_build roscpp</build_depend>
  <build_export_depend>qt_build roscpp</build_export_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>  <!--Geometry-->
  <build_depend>message_generation</build_depend> <!--Custom-->
  <build_depend>tf</build_depend>
  <build_depend>mission_protobuf</build_depend>
  <build_depend>mission_data_types</build_depend>

  <build_export_depend>mission_data_types</build_export_depend>
  <build_export_depend>mission_protobuf</build_export_depend>

  <exec_depend>mission_protobuf</exec_depend>
  <exec_depend>mission_data_types</exec_depend>
  <exec_depend>qt_build roscpp</exec_depend>

  <export></export>
</package>
